:iphone: [#2673] -- Fix excessive paddings on mobile

--- a/src/openforms/ui/static/ui/scss/components/layout/_layout.scss
+++ b/src/openforms/ui/static/ui/scss/components/layout/_layout.scss
@@ -24,5 +24,9 @@
 
   @include bem.element('container') {
     @include container(false);
+
+    @include mobile-only {
+      padding: 0;
+    }
   }
 }
